@@ -1,3 +1,8 @@
+2025-08-29  Morten Welinder  <terra@gnome.org>
+
+	* functions.c (gnumeric_log): Move guts to gnn_logbase and improve
+	there.
+
 2025-03-01  Morten Welinder <terra@gnome.org>
 
 	* Release 1.12.59
