@@ -1,3 +1,7 @@
+2025-08-29  Morten Welinder  <terra@gnome.org>
+
+	* src/mathfunc.c (gnm_logbase): New function.
+
 2025-03-01  Morten Welinder <terra@gnome.org>
 
 	* configure.ac: Post-release bump.
